# CFXS-UI-Dev

./: .clang-format  .gitmodules  APG.cfg.lua  CMakeLists.txt  README.md
CFXS_UI_Dev/: CMakeLists.txt  LinkerScript.ld  _Defines.cmake  _IncludeDirectories.cmake  _License.lhg  _Modules.cmake  _Sources.cmake
CFXS_UI_Dev/src/: _TM4C129X_Startup.cpp  main.cpp
